vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__architecture__tests__architecture_missing_of.snap
---
source: vhdl_syntax/src/parser/productions/architecture.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
architecture rtl myent is
begin
end;

== tree ==
ArchitectureBody
  ArchitecturePreamble
    Keyword(Architecture)
    Identifier 'rtl'
    Name
      NameDesignatorPrefix
        Identifier 'myent'
    Keyword(Is)
  DeclarationStatementSeparator
    Keyword(Begin)
  ArchitectureEpilogue
    Keyword(End)
    SemiColon

== diagnostics ==
1:17 expected 'of'
