vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__architecture__tests__parse_architecture_body.snap
---
source: vhdl_syntax/src/parser/productions/architecture.rs
expression: "to_test_text(Parser::architecture,\n\"\\\narchitecture arch_name of myent is\nbegin\nend architecture;\")"
---
ArchitectureBody
  ArchitecturePreamble
    Keyword(Architecture)
    Identifier 'arch_name'
    Keyword(Of)
    Name
      NameDesignatorPrefix
        Identifier 'myent'
    Keyword(Is)
  DeclarationStatementSeparator
    Keyword(Begin)
  ArchitectureEpilogue
    Keyword(End)
    Keyword(Architecture)
    SemiColon
